--- a/src/pages/scrollTopDemo/index.scss
+++ b/src/pages/scrollTopDemo/index.scss
@@ -1,4 +1,21 @@
+/* .list-box{
+    position: fixed;
+    top: 50px;
+    bottom: 20px;
+    overflow: auto;
+} */
+#dom1{
+    width: 200px;
+    height: 200px;
+    background-color: aliceblue;
+    margin:50px;
+    padding: 20px;
+    box-sizing: border-box;
+    border: 5px solid blueviolet;
+    overflow-y: auto;
+}
 .list-item{
+    position: relative;
     width: 300px;
     height: 200px;
     background-color: blueviolet;
